Korrektur Ortung komponente

--- a/index.html
+++ b/index.html
@@ -523,14 +523,14 @@
                         </div>
                         <div class="content">
                             <span>
-                                Die Ortung der Zweiräder findet im optimalen Fall durch ein eingebautes GNSS Empfänger
+                                Die Ortung der Zweiräder findet im optimalen Fall durch einen eingebauten GNSS Empfänger
                                 statt. Dadurch ist eine konstantere Ortung als bei GPS möglich, weil bei GNSS mehr
-                                Satelliten berücksichtigt werden. Trotz dessen sind GPS-Module unter den
-                                Zweiradverleihsystemen weit verbreitet.
-                                Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräder der Firma
+                                Satelliten berücksichtigt werden. Nichtdestotrotz sind GPS-Module unter den
+                                Zweiradverleihsystemen weit verbreitet. Zweiräder der Firma
                                 Nextbike nutzen ein solches Modul<a class="source-reference"
                                     href="index#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
-                                zu werden, wird dieses Konzept allerdings ein generisches GNSS Modul nutzen.
+                                zu werden, wird das hier präsentierte Konzept allerdings ein generisches GNSS Modul
+                                nutzen.
                             </span>
                         </div>
                     </div>
@@ -587,9 +587,12 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über das im Zweirad verbaute Funkmodul.
-                            Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und GSM-Module verwendet. 
-                            Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um eśelbst in HHäuserschluchten noch eine
+                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über
+                            das im Zweirad verbaute Funkmodul.
+                            Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und
+                            GSM-Module verwendet.
+                            Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
+                            eśelbst in HHäuserschluchten noch eine
                             Verbindung zu haben.
                         </div>
                     </div>
@@ -598,9 +601,12 @@
                             Stromversorgung
                         </div>
                         <div class="content">
-                            Alle Zweiräder verfügen über einen eingebauten Akku, welcher zur Stromversorgung der eingbauten Elektronik
-                            benötigt wird. Es gibt keinen standard Akku und so finden Akkus auf verschiedener Basis Verwendung. 
-                            Verwendet werden unter anderen Nickel-Metallhydrid-, Lithium-Polymer- und Nickel-Cadmium-Akkus. Sie werden
+                            Alle Zweiräder verfügen über einen eingebauten Akku, welcher zur Stromversorgung der
+                            eingbauten Elektronik
+                            benötigt wird. Es gibt keinen standard Akku und so finden Akkus auf verschiedener Basis
+                            Verwendung.
+                            Verwendet werden unter anderen Nickel-Metallhydrid-, Lithium-Polymer- und
+                            Nickel-Cadmium-Akkus. Sie werden
                             entweder durch einen eingebauten Dynamo oder Ladestationen geladen.
                         </div>
                     </div>
@@ -609,8 +615,10 @@
                             Sperrung / Entriegelung
                         </div>
                         <div class="content">
-                            Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss statt.
-                            Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades, welches das Fahren
+                            Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss
+                            statt.
+                            Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades,
+                            welches das Fahren
                             unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
                             die Stromzufuhr zum Motor zu unterbrechen.
                         </div>
@@ -620,9 +628,12 @@
                             Neuverteilung
                         </div>
                         <div class="content">
-                            Der ursprüngliche Gedanke, dass sich das System durch das Kundenverhalten selbst reguliert funktioniert in der Praxis nur teilweise.
-                            Durch ungleichmäßige Nutzung bilden sich im Verlauf der Zeit Gebiete mit einer zu hohen als auch einer zu niedrigen Dichte
-                            an verfügbaren Zweirädern. Die überschüssigen Zweiräder müssen dann durch die Firma in Form von Mitarbeitern in Lastwagen wieder 
+                            Der ursprüngliche Gedanke, dass sich das System durch das Kundenverhalten selbst reguliert
+                            funktioniert in der Praxis nur teilweise.
+                            Durch ungleichmäßige Nutzung bilden sich im Verlauf der Zeit Gebiete mit einer zu hohen als
+                            auch einer zu niedrigen Dichte
+                            an verfügbaren Zweirädern. Die überschüssigen Zweiräder müssen dann durch die Firma in Form
+                            von Mitarbeitern in Lastwagen wieder
                             optimal verteilt werden. Reparierte Zweiräder werde so auch wieder der Nutzung hinzugefügt.
                         </div>
                     </div>
@@ -631,9 +642,12 @@
                             Entsorgung
                         </div>
                         <div class="content">
-                            Zweiräder, welche einen zu großen Schade erlitten haben als dass sich eine Reperatur lohnen würde, werden verschrottet.
-                            Falls allerdings Zweiräder, welche noch funktionstüchtig sind nicht mehr benötigt werden, besteht die Möglichkeit 
-                            eines Verkaufes über Zweiradbörsen. Dieser Weg erlaubt es der Firma einen Teil der Anschaffungskosten der nun nicht
+                            Zweiräder, welche einen zu großen Schade erlitten haben als dass sich eine Reperatur lohnen
+                            würde, werden verschrottet.
+                            Falls allerdings Zweiräder, welche noch funktionstüchtig sind nicht mehr benötigt werden,
+                            besteht die Möglichkeit
+                            eines Verkaufes über Zweiradbörsen. Dieser Weg erlaubt es der Firma einen Teil der
+                            Anschaffungskosten der nun nicht
                             mehr benötigen Zweiräder wieder zu erhalten.
                         </div>
                     </div>
