Korrektur Komponente Abrechnung

--- a/index.html
+++ b/index.html
@@ -540,18 +540,18 @@
                         </div>
                         <div class="content">
                             Bei der Abrechnung stehen zwei Optionen zur Berechnung der Nutzungskostn zur Verfügung. Die
-                            erste
-                            Option wäre die Abrechnung nach gefahrener Strecke. Dabei würde das Zweirad während der
-                            Fahrt konstant
-                            geortet werden und je größer die zurückgelegte Strecke, desto mehr müsste der Kunde zahlen.
-                            Das Hauptproblem
+                            erste Option wäre die Abrechnung nach gefahrener Strecke. Dabei müsste das Zweirad während
+                            der Fahrt konstant geortet werden. Die Abrechnug erfolgt aufgrund der berechneten
+                            Gesamtstrecke. Das Hauptproblem
                             dabei sind die endgangenen Einnahmen, wenn ein Zweirad in einer großen Zeitspanne nur eine
                             kleine Strecke zurücklegt.
-                            Diese Zweirad kann in dieser Zeit von keinem anderen Kunden verwendet werden, bring aber nur
+                            Dieses Zweirad kann in dieser Zeit von keinem anderen Kunden verwendet werden, bringt aber
+                            nur
                             minimale Einnahmen.
                             Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer
-                            des Zweirad.
-                            Die relevanten Daten wie Startzeitpunkt und der Endzeitpunkt der Endleihe
+                            des Zweirades.
+                            Die relevanten Daten des Start- und Endzeitpunktes der Leihe müssen von der zentralen
+                            Verwaltung erfasst und zur Abrechnung verarbeitet werden.
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
