Korrektur Komponente Wartung

--- a/index.html
+++ b/index.html
@@ -561,11 +561,12 @@
                         <div class="content">
                             Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
                             Sammel- und Abgabestellen
-                            durchführen. Je nach schwere der Schäden können die Zweiräder dann vor Ort oder in einer
-                            Werkstadt wieder instand gesetzt werden.
-                            Bei Zweirädern, welche in einem Gebiet verteilt sind, ist die jeweilige Firma auf die
+                            durchführen. Je nach Schwere der Schäden können die Zweiräder dann vor Ort oder in einer
+                            Werkstadt wieder instandgesetzt werden.
+                            Bei Zweirädern, welche über ein größeres Gebiet verteilt sind, ist die jeweilige Firma auf
+                            die
                             Meldung von Schäden durch Kunden oder
-                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Jene Zweiräder werden dann
+                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                             mithilfe eines Transporters eingesammelt
                             und in die Werkstatt befördert.
                         </div>
@@ -656,9 +657,11 @@
                             Verwaltung
                         </div>
                         <div class="content">
-                            Die Verwaltung aller Daten des Systems erfolgt über einen zentralen Server. Alle Webanwendung, Apps und Zweiräder
-                            haben Zugriff auf ihn, sodass ein Nutzer sich nicht immer neu anmelden muss, wenn er ein neues Gebiet betritt.
-                            
+                            Die Verwaltung aller Daten des Systems erfolgt über einen zentralen Server. Alle
+                            Webanwendung, Apps und Zweiräder
+                            haben Zugriff auf ihn, sodass ein Nutzer sich nicht immer neu anmelden muss, wenn er ein
+                            neues Gebiet betritt.
+
                         </div>
                     </div>
                     <div class="topic" id="komponente-systemabbild">
