noch der letzte Part

--- a/index.html
+++ b/index.html
@@ -658,7 +658,6 @@
                         <div class="content">
                             Die Verwaltung aller Daten des Systems erfolgt über einen zentralen Server. Alle Webanwendung, Apps und Zweiräder
                             haben Zugriff auf ihn, sodass ein Nutzer sich nicht immer neu anmelden muss, wenn er ein neues Gebiet betritt.
-                            
                         </div>
                     </div>
                     <div class="topic" id="komponente-systemabbild">
@@ -753,7 +752,10 @@
                             <div class="column">
                                 <span class="author-annotation">Ulrich Schuppe</span>
                                 <span>
-
+                                    Leihbare Zweiräder haben sich als Forbewegungsmittel für die Freizeit etabliert, anstatt
+                                    die Nutzung von Autos für kurze Strecken zu reduzieren. Sodass sie nur noch als störende
+                                    Wegblockaden an allen nur erdenklichen Orten in der Stadt taugen und als fahrbarer Untersatz
+                                    wenn man von A nach B möchte, zu faul zum laufen und zu viel Geld in der Tasche hat.
                                 </span>
                             </div>
                         </div>
