Quellen für Komponenten fehlen noch

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                             Meldung von Schäden durch Kunden oder
                             durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                             mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert.
+                            und in die Werkstatt befördert. X3
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
