Hinweise auf Quellen eingetragen -> Quellen an sich sind fehlerhaft

--- a/index.html
+++ b/index.html
@@ -591,9 +591,9 @@
                             Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über
                             das im Zweirad verbaute Funkmodul.
                             Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und
-                            GSM-Module verwendet.
+                            GSM-Module verwendet. X 1 7 2
                             Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
-                            eśelbst in HHäuserschluchten noch eine
+                            eśelbst in Häuserschluchten noch eine
                             Verbindung zu haben.
                         </div>
                     </div>
@@ -617,7 +617,7 @@
                         </div>
                         <div class="content">
                             Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss
-                            statt.
+                            statt. X 5
                             Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades,
                             welches das Fahren
                             unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
