--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                             Meldung von Schäden durch Kunden oder
                             durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                             mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert. X3
+                            und in die Werkstatt befördert.[3]
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
@@ -591,7 +591,7 @@
                             Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über
                             das im Zweirad verbaute Funkmodul.
                             Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und
-                            GSM-Module verwendet. X 1 7 2
+                            GSM-Module verwendet. [1][7][2]
                             Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
                             eśelbst in Häuserschluchten noch eine
                             Verbindung zu haben.
@@ -617,7 +617,7 @@
                         </div>
                         <div class="content">
                             Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss
-                            statt. X 5
+                            statt.[5]
                             Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades,
                             welches das Fahren
                             unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
