[2] zu links gemacht bei Komponenten

--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
                             Wartung
                         </div>
                         <div class="content">
+                            <span>
                             Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
                             Sammel- und Abgabestellen
                             durchführen. Je nach Schwere der Schäden können die Zweiräder dann vor Ort oder in einer
@@ -568,7 +569,8 @@
                             Meldung von Schäden durch Kunden oder
                             durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                             mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert.[3]
+                            und in die Werkstatt befördert.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
+                        </span>
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
@@ -588,13 +590,14 @@
                             Statuserhebung
                         </div>
                         <div class="content">
+                            <span>
                             Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über
                             das im Zweirad verbaute Funkmodul.
                             Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und
-                            GSM-Module verwendet. [1][7][2]
+                            GSM-Module verwendet. <a class="source-reference" href="index#sources"><sup>[1][7][2]</sup></a>           
                             Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
-                            eśelbst in Häuserschluchten noch eine
-                            Verbindung zu haben.
+                            selbst in Häuserschluchten noch eine Verbindung zu haben.
+                            </span>
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
