Korrektur gram. Fehler

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         </div>
                         <div class="content">
                             Das System wird mit sensiblen sowie identifizierenden Daten von Nutzern arbeiten.
-                            Ortungsdaten, Identitätsdaten sowie Zahlungsdaten müssen vertrauclich behandelt werden.
+                            Ortungsdaten, Identitätsdaten sowie Zahlungsdaten müssen vertraulich behandelt werden.
                             Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden. Dieses
                             Ziel entspricht den rechtlichen und sozialen Interessen der Stakeholder.
                         </div>
@@ -539,7 +539,7 @@
                             Abrechnung
                         </div>
                         <div class="content">
-                            Bei der Abrechnung stehen zwei Optionen zur Berechnung der Nutzungskostn zur Verfügung. Die
+                            Bei der Abrechnung stehen zwei Optionen zur Berechnung der Nutzungskosten zur Verfügung. Die
                             erste Option wäre die Abrechnung nach gefahrener Strecke. Dabei müsste das Zweirad während
                             der Fahrt konstant geortet werden. Die Abrechnug erfolgt aufgrund der berechneten
                             Gesamtstrecke. Das Hauptproblem
@@ -549,9 +549,9 @@
                             nur
                             minimale Einnahmen.
                             Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer
-                            des Zweirades.
-                            Die relevanten Daten des Start- und Endzeitpunktes der Leihe müssen von der zentralen
-                            Verwaltung erfasst und zur Abrechnung verarbeitet werden.
+                            des Zweirades. Dabei werden während der Entsperrung dem Server alle wichtigen Daten über das
+                            Zweirad als auch den Kunden übermittelt.
+                            
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
@@ -569,7 +569,7 @@
                             Meldung von Schäden durch Kunden oder
                             durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                             mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
+                            und in die Werkstatt befördert. Die die Transporter werden sie auch wieder neu verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
                         </span>
                         </div>
                     </div>
