--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         die
                         Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Die Summe der
                         Funktionen
-                        und ihrer Interaktionen sowie Material- Informations- und Energieflüsse werden als Systemabbild
+                        und ihrer Interaktionen sowie Material-, Informations- und Energieflüsse werden als Systemabbild
                         dargestellt. Implementiert werden diese Funktionen durch Komponenten, die in das
                         Systemabbild eingesetzt werden. Das Systemabbild stellt eine konkret realisierbare Umsetzung
                         eines
