removed stakeholder part

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         Zweiradverleihsysteme sind Systeme, die es einem Nutzer oder Kunden erlauben, ein Zweirad zu
                         leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die Definition
                         sekundärer Ziele vonnöten, um eine zufriedenstellende Umsetzung dessen zu ermöglichen. Diese
-                        Ziele lassen sich zu verschiedenen Graden den wirtschaftlichen, ökologischen, rechtlichen und
+                        Ziele lassen sich den wirtschaftlichen, ökologischen, rechtlichen und
                         sozialen Interessen der Stakeholder des Systems zuordnen.
                     </span>
                     <div class="topic" id="automatisierung">
