--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         werden, um
                         eine feste Aufstellung von Anforderungen zu ermöglichen. Anhand dieser Anforderungen lassen sich
                         die
-                        Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Die Summe der
+                        Funktionen identifizieren, die für den Betrieb des Systems benötigt werden. Die Summe der
                         Funktionen
                         und ihrer Interaktionen sowie Material-, Informations- und Energieflüsse werden als Systemabbild
                         dargestellt. Implementiert werden diese Funktionen durch Komponenten, die in das
