--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
                 <div class="column">
                     <span class="author-annotation">Paul Brätz</span>
                     <span>
-                        Zweiradverleihsysteme sind Systeme, die es einem Nutzer oder Kunden erlauben, ein Zweirad zu
-                        leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die Definition
-                        sekundärer Ziele vonnöten, um eine zufriedenstellende Umsetzung dessen zu ermöglichen. Diese
-                        Ziele lassen sich den wirtschaftlichen, ökologischen, rechtlichen und
-                        sozialen Interessen der Stakeholder des Systems zuordnen.
+                        Zweiradverleihsysteme sind Systeme, die es einem Nutzer oder Kunden erlauben, ein
+                        Zweirad zu leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die
+                        Definition sekundärer Ziele vonnöten, um eine zufriedenstellende Umsetzung dessen zu
+                        ermöglichen. Diese Ziele lassen sich den wirtschaftlichen, ökologischen, rechtlichen und
+                        sozialen Interessen der Stakeholder des Systems zuordnen. Sie lauten wie folgt:
                     </span>
                     <div class="topic" id="automatisierung">
                         <div class="title">
@@ -381,7 +381,7 @@
                         <div class="content">
                             Die Kosten der Nutzung von Zweirädern müssen nach einem Schlüssel berechnet werden. Zwei
                             Möglichkeiten der Abrechnung sind zeit- oder streckenabhängige Gebühren. Bei einer
-                            streckenbasierten Abrechnung stellt sich die Datenermittlung- und Verarbeitung als
+                            streckenbasierten Abrechnung stellt sich die Datenermittlung und -verarbeitung als
                             komplizierter heraus, als es die zeitbasierte ermöglichen würde. Die ermittelten Daten
                             entsprechen allerdings genauer der tatsächlichen Nutzung. Eine streckenbasierte Abrechnung
                             könnte durch die ständige Übermittlung von Ortungsdaten durch das Zweirad erfolgen. Eine
@@ -551,7 +551,7 @@
                             Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer
                             des Zweirades. Dabei werden während der Entsperrung dem Server alle wichtigen Daten über das
                             Zweirad als auch den Kunden übermittelt.
-                            
+
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
@@ -560,17 +560,20 @@
                         </div>
                         <div class="content">
                             <span>
-                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
-                            Sammel- und Abgabestellen
-                            durchführen. Je nach Schwere der Schäden können die Zweiräder dann vor Ort oder in einer
-                            Werkstadt wieder instandgesetzt werden.
-                            Bei Zweirädern, welche über ein größeres Gebiet verteilt sind, ist die jeweilige Firma auf
-                            die
-                            Meldung von Schäden durch Kunden oder
-                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
-                            mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert. Die die Transporter werden sie auch wieder neu verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
-                        </span>
+                                Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an
+                                festen
+                                Sammel- und Abgabestellen
+                                durchführen. Je nach Schwere der Schäden können die Zweiräder dann vor Ort oder in einer
+                                Werkstadt wieder instandgesetzt werden.
+                                Bei Zweirädern, welche über ein größeres Gebiet verteilt sind, ist die jeweilige Firma
+                                auf
+                                die
+                                Meldung von Schäden durch Kunden oder
+                                durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
+                                mithilfe eines Transporters eingesammelt
+                                und in die Werkstatt befördert. Die die Transporter werden sie auch wieder neu
+                                verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
+                            </span>
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
@@ -591,12 +594,15 @@
                         </div>
                         <div class="content">
                             <span>
-                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über
-                            das im Zweirad verbaute Funkmodul.
-                            Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und
-                            GSM-Module verwendet. <a class="source-reference" href="index#sources"><sup>[1][7][2]</sup></a>           
-                            Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
-                            selbst in Häuserschluchten noch eine Verbindung zu haben.
+                                Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt
+                                über
+                                das im Zweirad verbaute Funkmodul.
+                                Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN
+                                und
+                                GSM-Module verwendet. <a class="source-reference"
+                                    href="index#sources"><sup>[1][7][2]</sup></a>
+                                Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
+                                selbst in Häuserschluchten noch eine Verbindung zu haben.
                             </span>
                         </div>
                     </div>
@@ -773,9 +779,12 @@
                             <div class="column">
                                 <span class="author-annotation">Ulrich Schuppe</span>
                                 <span>
-                                    Leihbare Zweiräder haben sich als Forbewegungsmittel für die Freizeit etabliert, anstatt
-                                    die Nutzung von Autos für kurze Strecken zu reduzieren. Sodass sie nur noch als störende
-                                    Wegblockaden an allen nur erdenklichen Orten in der Stadt taugen und als fahrbarer Untersatz
+                                    Leihbare Zweiräder haben sich als Forbewegungsmittel für die Freizeit etabliert,
+                                    anstatt
+                                    die Nutzung von Autos für kurze Strecken zu reduzieren. Sodass sie nur noch als
+                                    störende
+                                    Wegblockaden an allen nur erdenklichen Orten in der Stadt taugen und als fahrbarer
+                                    Untersatz
                                     wenn man von A nach B möchte, zu faul zum laufen und zu viel Geld in der Tasche hat.
                                 </span>
                             </div>
