--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         Zweirad zu leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die
                         Definition sekundärer Ziele vonnöten, um eine zufriedenstellende Umsetzung dessen zu
                         ermöglichen. Diese Ziele lassen sich den wirtschaftlichen, ökologischen, rechtlichen und
-                        sozialen Interessen der Stakeholder des Systems zuordnen. Sie lauten wie folgt:
+                        sozialen Interessen der Stakeholder des Systems zuordnen.
                     </span>
                     <div class="topic" id="automatisierung">
                         <div class="title">
@@ -276,7 +276,7 @@
                             des laufenden Systems minimiert werden. Automatisierte Systeme, die komplexe Aufgaben
                             erfüllen, sind allgemein fehlerresistenter, skalierbarer sowie globaler anwendbar und
                             damit wirtschaftlicher. Auch ist der Nutzeraufwand bei Verwendung eines entsprechend
-                            ausgelegtem automatisierten, digitalen Systems geringer. Dieses Ziel entspricht den
+                            ausgelegten automatisierten, digitalen Systems geringer. Dieses Ziel entspricht den
                             wirtschaftlichen und ökologischen Interessen der Stakeholder.
                         </div>
                     </div>
@@ -560,7 +560,6 @@
                         </div>
                         <div class="content">
                             <span>
-<<<<<<< HEAD
                                 Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an
                                 festen
                                 Sammel- und Abgabestellen
@@ -575,19 +574,6 @@
                                 und in die Werkstatt befördert. Die die Transporter werden sie auch wieder neu
                                 verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
                             </span>
-=======
-                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
-                            Sammel- und Abgabestellen
-                            durchführen. Je nach Schwere der Schäden können die Zweiräder dann vor Ort oder in einer
-                            Werkstadt wieder instand gesetzt werden.
-                            Bei Zweirädern, welche über ein größeres Gebiet verteilt sind, ist die jeweilige Firma auf
-                            die
-                            Meldung von Schäden durch Kunden oder
-                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
-                            mithilfe eines Transporters eingesammelt
-                            und in die Werkstatt befördert. Durch die Transporter werden sie auch wieder neu verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
-                        </span>
->>>>>>> 85c64251edd1d2a772265d528b13052847c49484
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
@@ -595,7 +581,7 @@
                             Benutzeroberfläche
                         </div>
                         <div class="content">
-                            Als Möglichkeiten der Interaktion des Kundens mit dem System, Firma und Zweirad wirden eine App
+                            Als Möglichkeiten der Interaktion des Kundens mit dem System, Firma, Zweirad werden eine App
                             für das Mobiltelefon als auch eine Webseite
                             zur Verfügung gestellt. Jene bieten eine Verbindung zum Kundensupport, Informationen über
                             für den Kunden relevante Details, wie Kosten,
@@ -639,14 +625,12 @@
                             Sperrung / Entriegelung
                         </div>
                         <div class="content">
-                            <span>
-                                Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss
-                                statt.<a class="source-reference" href="index#sources"><sup>[5]</sup></a>
-                                Dabei schiebt ein elektrischer Motor einen Bolzen zwischen die Speichen eines Rades,
-                                welches das Fahren
-                                unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
-                                die Stromzufuhr zum Motor zu unterbrechen.
-                            </span>
+                            Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss
+                            statt.[5]
+                            Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades,
+                            welches das Fahren
+                            unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
+                            die Stromzufuhr zum Motor zu unterbrechen.
                         </div>
                     </div>
                     <div class="topic" id="komponente-neuverteilung">
@@ -659,7 +643,7 @@
                             Durch ungleichmäßige Nutzung bilden sich im Verlauf der Zeit Gebiete mit einer zu hohen als
                             auch einer zu niedrigen Dichte
                             an verfügbaren Zweirädern. Die überschüssigen Zweiräder müssen dann durch die Firma in Form
-                            von Mitarbeitern in Lastwagen oder Lime-Juicer wieder
+                            von Mitarbeitern in Lastwagen wieder
                             optimal verteilt werden. Reparierte Zweiräder werde so auch wieder der Nutzung hinzugefügt.
                         </div>
                     </div>
@@ -668,9 +652,9 @@
                             Entsorgung
                         </div>
                         <div class="content">
-                            Zweiräder, welche einen zu großen Schaden erlitten haben als dass sich eine Reperatur lohnen
+                            Zweiräder, welche einen zu großen Schade erlitten haben als dass sich eine Reperatur lohnen
                             würde, werden verschrottet.
-                            Falls allerdings Zweiräder, welche noch funktionstüchtig sind, nicht mehr benötigt werden,
+                            Falls allerdings Zweiräder, welche noch funktionstüchtig sind nicht mehr benötigt werden,
                             besteht die Möglichkeit
                             eines Verkaufes über Zweiradbörsen. Dieser Weg erlaubt es der Firma einen Teil der
                             Anschaffungskosten der nun nicht
