--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             zentrales Verwaltungssystem vonnöten. Es ist mit einer örtlich stark verteilten sowie
                             variierenden Last zu rechnen. Daher muss das Verwaltungssystem skalierbar und
                             global unabhängig sein. Für Softwarelösungen wird meist auch ein Anspruch an Modularität
-                            gestellt. Dieser kann hier ducrh die Möglichkeit der Erweiterung auf andere Fahrzeuge und
+                            gestellt. Dieser kann hier durch die Möglichkeit der Erweiterung auf andere Fahrzeuge und
                             Bezahlmöglichkeiten abgebildet werden. Grundsätzlich sollte das System softwaretechnisch
                             unter Nutzung moderner Strategien entwickelt werden, um eine langzeitliche Unterstützung und
                             Wartung zu vereinfachen. Dieses Ziel entspricht den wirtschaftlichen Interessen der
