--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             global unabhängig sein. Für Softwarelösungen wird meist auch ein Anspruch an Modularität
                             gestellt. Dieser kann hier durch die Möglichkeit der Erweiterung auf andere Fahrzeuge und
                             Bezahlmöglichkeiten abgebildet werden. Grundsätzlich sollte das System softwaretechnisch
-                            unter Nutzung moderner Strategien entwickelt werden, um eine langzeitliche Unterstützung und
+                            unter Nutzung moderner Strategien entwickelt werden, um eine langfristige Unterstützung und
                             Wartung zu vereinfachen. Dieses Ziel entspricht den wirtschaftlichen Interessen der
                             Stakeholder.
                         </div>
