--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             Wartung
                         </div>
                         <div class="content">
-                            Das System sollte möglichst wartungsarm sein. Dieses Ziel trifft sowohl auf Hard- wie
+                            Das System sollte möglichst wartungsarm sein. Dieses Ziel trifft sowohl auf Hard- als
                             auch Software zu. Zweiräder sollen eine maximale Dienstzeit haben, ein wartungsarmes Design
                             wird also auf lange Zeit die laufenden Kosten senken. Eine Balance zwischen initialen
                             Anschaffungskosten und laufenden Wartungskosten muss gefunden werden. Gleiches trifft auf
